# nonebot-plugin-mcsm

./: .gitignore  README.md  pyproject.toml  test.py
nonebot_plugin_mcsm/: __init__.py  __main__.py  config.py  image.py  mcsm_api.py  model.py  utils.py
nonebot_plugin_mcsm/static/templates/: instance_info.css  instance_info.html  instance_list.css  instance_list.html  node_list.css  node_list.html  panel_info.css  panel_info.html
