[project]
name = "nonebot-plugin-mcsm"
version = "0.1.0"
description = "nonebot-plugin-mcsm"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_mcsm"]

[tool.poetry]
name = "nonebot-plugin-mcsm"
version = "0.1.0"
description = "MCSM plugin for NoneBot2"
authors = ["LiLuo-B"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/LiLuo-B/nonebot-plugin-mcsm"
documentation = "https://github.com/LiLuo-B/nonebot-plugin-mcsm/blob/main/README.md"
[tool.poetry.dependencies]
python = ">=3.8,<4.0"
nonebot2 = ">=2.2.0"
nonebot-adapter-onebot = ">=2.2.3"
nonebot-plugin-htmlrender = ">=0.3.1"
httpx = ">0.27.0"
jinja2 = ">=3.1.4"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
